# yeep-another-passwordvault

./: Cargo.toml  README.md  config.toml
.github/workflows/: build.yml
src/: main.rs
src/api/: cli.rs  config.rs  crypt.rs  mod.rs  storage.rs
