[package]
name = "yeep"
version = "0.0.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
magic-crypt = "*"
toml = "0.8.8"
serde = "1.0.136"
serde_derive = "1.0.136"